--- a/scss/index.scss
+++ b/scss/index.scss
@@ -214,8 +214,16 @@ footer .logo:hover {
   color: $white;
   background-size: cover;
   overflow: hidden;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("../assets/img/bg.webp") no-repeat;
-
+   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));
+  .video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
   &::before {
     content: "";
     position: absolute;
