--- a/templates/about.html
+++ b/templates/about.html
@@ -80,10 +80,11 @@
     <section>
       <section class="slider">
         <article class="slider-inner" id="slider-inner">
-          <img src="../assets/img-slider/slider1.jpg" />
-          <img src="../assets/img-slider/slider2.jpg" />
-          <img src="../assets/img-slider/slider3.jpg" />
-          <img src="../assets/img-slider/slider4.jpg" />
+          <img src="../assets/img-slider/slider1.avif" />
+          <img src="../assets/img-slider/slider2.avif" />
+          <img src="../assets/img-slider/slider3.avif" />
+          <img src="../assets/img-slider/slider4.avif" />
+          <img src="../assets/img-slider/slider5.avif" />
         </article>
       </section>
     </section>
